--- a/Cookie-Policy.html
+++ b/Cookie-Policy.html
@@ -202,7 +202,7 @@
 				<code>fsdAnalyticsUuid.v1</code>
 			</td>
 			<td>
-				<code>Analytics tracking</code>
+				<p>Analytics tracking</p>
 			</td>
 			<td>
 				<p>Internal</p>
