--- a/Terms-of-Use.html
+++ b/Terms-of-Use.html
@@ -159,7 +159,7 @@
 
 <h4>Additional Terms – Brands and Creators</h4>
 
-<p>In addition to these Terms of Use, as a further condition to using the Reelio Platform, if you are a Brand, you agree to the <a href="https://reelio.com/terms/">Additional Terms – Brands</a>, or if you are a Creator, you agree to the <a href="https://reelio.com/terms/">Additional Terms – Creators</a>.</p>
+<p>In addition to these Terms of Use, as a further condition to using the Reelio Platform, if you are a Brand, you agree to the <a href="https://reelio.com/additional-terms-brands/">Additional Terms – Brands</a>, or if you are a Creator, you agree to the <a href="https://reelio.com/additional-terms-creators/">Additional Terms – Creators</a>.</p>
 
 <h4>Campaign Terms</h4>
 
