--- a/Privacy-Policy.html
+++ b/Privacy-Policy.html
@@ -6,6 +6,8 @@
 
 <p>Please read this Privacy Policy carefully, along with our <a href="https://fullscreenmedia.co/legal/#terms-use">Terms of Use</a> and <a href="https://fullscreenmedia.co/legal/#cookie-policy">Cookie Policy</a> (collectively, the “Agreement”). By continuing to use our Services, you are expressly consenting to the collection, storage, use and disclosure of your personal information as described in this Privacy Policy.</p>
 
+<p>You further acknowledge that the Services use the <a href="https://developers.google.com/youtube/terms/developer-policies#definition-youtube-api-services">YouTube API Services</a> and, as such, you consent to the terms of the <a href="https://www.google.com/policies/privacy/">Google Privacy Policy</a>.</p>
+
 <h2>1. Introduction to Our Privacy Policy</h2>
 
 <p>We at Fullscreen, Inc. (the “Company,” “we,” “us,” or “our”, including our subsidiaries) know that our users care how their personally identifiable information (“Information”) is used and shared, and we take your privacy seriously. This Privacy Policy (the “Policy”) describes how we collect, use and disclose Information when you use any of our Services, including but not limited to:</p>
