--- a/Privacy-Policy.html
+++ b/Privacy-Policy.html
@@ -151,9 +151,10 @@
 <p>If you have any questions or concerns regarding our Policy, please send us a detailed message at the address below, and we will try to resolve your concerns.</p>
 
 <address>
-  Fullscreen, Inc.<br />
-  12180 Millennium Drive<br />
-  Los Angeles, CA 90094<br />
+  WarnerMedia Privacy Office<br>
+  4000 Warner Blvd.,<br>
+  Building 160<br>
+  Burbank, CA 91522<br>
   Attn: Privacy / Legal Department
 </address>
 
