Update privacy email address

--- a/Cookie-Policy.html
+++ b/Cookie-Policy.html
@@ -479,5 +479,5 @@
   Attn: Privacy / Legal Department
 </address>
 
-<p>Email: <a href="mailto:privacy@fullscreen.com">privacy@fullscreen.com</a></p>
+<p>Email: <a href="mailto:WMPrivacy@warnermediagroup.com">WMPrivacy@warnermediagroup.com</a></p>
 <p>Effective: May 25, 2018</p>
