--- a/Terms-of-Use.html
+++ b/Terms-of-Use.html
@@ -41,7 +41,7 @@
 
 <p>You must be 18 or older to use our Services. Minors under 18 and at least 13 years of age are only permitted to use our Services through an account owned by a parent or legal guardian with their appropriate permission and under their direct supervision. Children under 13 are not permitted to use the Services. Creating an account with false information is a violation of our terms, including accounts registered on behalf of others or persons under the age of 13. This Agreement is void where prohibited by law, and the right to access the Services is revoked in such jurisdictions.</p>
 
-<p>We do not knowingly collect or solicit personal information from anyone under the age of 13 or knowingly allow such persons to register for the Services. If you are under 13, please do not attempt to register for the Services or send any information about yourself to us, including your name, address, telephone number, or email address. In the event that we learn that we have collected personal information from a child under age 13 without verification of parental consent, we will delete that information as quickly as possible. If you believe that we might have any information from or about a child under 13, please contact us at <a href="mailto:privacy@fullscreen.com">privacy@fullscreen.com</a>.</p>
+<p>We do not knowingly collect or solicit personal information from anyone under the age of 13 or knowingly allow such persons to register for the Services. If you are under 13, please do not attempt to register for the Services or send any information about yourself to us, including your name, address, telephone number, or email address. In the event that we learn that we have collected personal information from a child under age 13 without verification of parental consent, we will delete that information as quickly as possible. If you believe that we might have any information from or about a child under 13, please contact us at <a href="mailto:WMPrivacy@warnermediagroup.com">WMPrivacy@warnermediagroup.com</a>.</p>
 
 <h3>2.3 Your Account</h3>
 
@@ -316,7 +316,7 @@ Los Angeles, CA 90094<br>
 Attn: Privacy / Legal Department
 </address>
 
-<p>Email: <a href="mailto:privacy@fullscreen.com">privacy@fullscreen.com</a> & <a href="mailto:support@fullscreen.com">support@fullscreen.com</a></p>
+<p>Email: <a href="mailto:WMPrivacy@warnermediagroup.com">WMPrivacy@warnermediagroup.com</a> & <a href="mailto:support@fullscreen.com">support@fullscreen.com</a></p>
 
 <p>PRIOR VERSIONS<br> You will find a link to prior versions of our Terms of Use below. We have stored these versions on GitHub, which will also allow you to compare different versions and see what terms have changed: https://github.com/fullscreeninc/Policy</p>
 
