Remove `WMPrivacy@` from terms of use

--- a/Terms-of-Use.html
+++ b/Terms-of-Use.html
@@ -316,7 +316,7 @@ Los Angeles, CA 90094<br>
 Attn: Privacy / Legal Department
 </address>
 
-<p>Email: <a href="mailto:WMPrivacy@warnermediagroup.com">WMPrivacy@warnermediagroup.com</a> & <a href="mailto:support@fullscreen.com">support@fullscreen.com</a></p>
+<p>Email: <a href="mailto:support@fullscreen.com">support@fullscreen.com</a></p>
 
 <p>PRIOR VERSIONS<br> You will find a link to prior versions of our Terms of Use below. We have stored these versions on GitHub, which will also allow you to compare different versions and see what terms have changed: https://github.com/fullscreeninc/Policy</p>
 
